# web_home_work_7

./: config.ini  my_select.py  pyproject.toml  seed.py
migration/: env.py
migration/versions/: 5246dca862d8_init.py  5bbeb8f599a0_init.py
src/: db.py  models.py
