[tool.poetry]
name = "web-home-work-7"
version = "0.1.0"
description = ""
authors = ["Hubsit <vitaliy.kievskiy@hotmail.com>"]
readme = "README.md"
packages = [{include = "web_home_work_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.5.post1"
alembic = "^1.10.2"
psycopg2 = "^2.9.5"
faker = "^17.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
